@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-06T00:36:09Z",
-  "count" : 7,
-  "count_minmax" : [ 4, 7 ],
-  "count_decinc" : [ -0, +7 ],
-  "uniques" : 2,
+  "timestamp" : "2022-07-19T16:06:46Z",
+  "count" : 3,
+  "count_minmax" : [ 3, 7 ],
+  "count_decinc" : [ -4, +7 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
