@@ -1,11 +1,11 @@
 {
-  "count": 53,
-  "uniques": 13,
+  "count": 49,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 7,
-      "uniques": 2
+      "count": 3,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-07T00:00:00Z",
