@@ -1,3 +1,10 @@
+2022-07-19T16:06:46Z:
+* notice: last 14d: unq all: 12 49
+* notice: prev accum: outdated-unq outdated-all / unq all: 100 539 / 114 592
+* notice: next accum: outdated-unq outdated-all / unq all: 100 539 / 113 588
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -4 / +2 +7 -1 -4 / 1 3
+* notice: removed / changed dates: [] / [2022-07-05]
+
 2022-07-18T16:12:16Z:
 * notice: last 14d: unq all: 13 53
 * notice: prev accum: outdated-unq outdated-all / unq all: 98 537 / 110 579
